bynkc/tests/fixtures/negative/133_integration_unknown_participant/src/it.bynk
suite integration "x" {
  wires app.a, app.b, app.nope
  case "t" { let r <- app.a.ping() expect r == 1 }
}
